Refactor GraphResultController and TableResultController for improved functionality and usability
- Removed unused copy functionality in GraphResultController and streamlined toolbar actions.
- Enhanced export functionality in GraphResultController with better notification handling.
- Updated TableResultController to support copy selection and all rows with keyboard shortcuts.
- Improved TableResultView to enable cell selection and multiple selection modes.
- Added methods for building TSV content from selected rows and all rows in TableResultController.
- Enhanced user feedback with notifications for copy actions in TableResultController.